# cfi-eval

./: .gitignore
cbench/cross_DSO/object/injection/: .gdb_history
cbench/type_confusion/: cfi_object.cpp
cbench_build/: CMakeLists.txt  benchmark.sh
cbench_build/cross_DSO/: CMakeLists.txt
cbench_build/cross_DSO/call/: CMakeLists.txt
cbench_build/cross_DSO/call/cptr_overwrite/: CMakeLists.txt  test.py
cbench_build/cross_DSO/call/cptr_reuse/: CMakeLists.txt  lib.c  test.py
cbench_build/cross_DSO/call/obj_injection/: CMakeLists.txt  lib.cpp  lib.h  obj_inject.cpp  test.py
cbench_build/cross_DSO/call/obj_reuse/: CMakeLists.txt  lib.cpp  lib.h  obj_reuse.cpp  test.py
cbench_build/cross_DSO/callback/: CMakeLists.txt
cbench_build/cross_DSO/callback/cptr_overwrite/: CMakeLists.txt  lib.c  test.py
cbench_build/cross_DSO/callback/cptr_reuse/: CMakeLists.txt  callback_cptr_reuse.c  lib.c  test.py
cbench_build/cross_DSO/callback/obj_injection/: CMakeLists.txt  callback_obj_inject.cpp  lib.h  test.py
cbench_build/cross_DSO/callback/obj_reuse/: CMakeLists.txt  callback_obj_reuse.cpp  lib.h  test.py
cbench_build/indirect_call/: CMakeLists.txt  ptr_OOB.c  ptr_overwrite.c  test.py
cbench_build/indirect_jump/: CMakeLists.txt  tailcall_overwrite.c  tailcall_reuse_multithreading.c  tailcall_reuse_single_phread.c  test.py
cbench_build/type_confusion/: CMakeLists.txt  test.py
cbench_build/virtual_call/: coop.py
